// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders with customStyle 1`] = `
<DocumentFragment>
  .cache-nkg4td-StyledBackdrop {
  position: fixed;
  top: 0;
  right: 0;
  height: 0;
  width: 0;
  overflow: hidden;
}

.cache-nkg4td-StyledBackdrop[data-open='true'] {
  overflow: auto;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #464959A6;
  bottom: 0;
  left: 0;
  height: 100%;
  width: 100%;
  opacity: 1;
}

.cache-1qlb7bg-StyledDialog {
  background-color: #ffffff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 24px;
  width: 708px;
  box-shadow: 0px 8px 40px 10px #151A2D5C;
}

.cache-1qlb7bg-StyledDialog[data-size="large"] {
  width: 850px;
}

.cache-1qlb7bg-StyledDialog[data-size="medium"] {
  width: 708px;
}

.cache-1qlb7bg-StyledDialog[data-size="small"] {
  width: 616px;
}

.cache-1qlb7bg-StyledDialog[data-size="xsmall"] {
  width: 400px;
}

.cache-1qlb7bg-StyledDialog[data-size="xxsmall"] {
  width: 360px;
}

.cache-1qlb7bg-StyledDialog[data-placement="bottom"] {
  margin: auto;
  margin-bottom: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="bottom-left"] {
  margin: auto;
  margin-left: 0;
  margin-bottom: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="bottom-right"] {
  margin: auto;
  margin-right: 0;
  margin-bottom: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="center"] {
  margin: auto;
}

.cache-1qlb7bg-StyledDialog[data-placement="left"] {
  margin: auto;
  margin-left: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="right"] {
  margin: auto;
  margin-right: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="top"] {
  margin: auto;
  margin-top: 0px;
}

.cache-1qlb7bg-StyledDialog[data-placement="top-left"] {
  margin: auto;
  margin-left: 0;
  margin-top: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="top-right"] {
  margin: auto;
  margin-right: 0;
  margin-top: 0;
}

.cache-10pzl3m-StyledContainer {
  position: absolute;
  top: 16px;
  right: 16px;
}

.cache-xnjxeq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.cache-xnjxeq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-xnjxeq-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-xnjxeq-StyledGhostButton:hover,
.cache-xnjxeq-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.cache-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div>
    <div
      class="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop). cache-nkg4td-StyledBackdrop e1cqen9h1"
      data-open="true"
    >
      <dialog
        aria-label="modal"
        class="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop). cache-1qlb7bg-StyledDialog e1cqen9h0"
        data-placement="center"
        data-size="small"
        id=":r3:"
        open=""
      >
        <div>
          test
        </div>
        <div
          class="cache-10pzl3m-StyledContainer e227mx40"
        >
          <button
            aria-label="close"
            class="cache-xnjxeq-StyledGhostButton e112qvla0"
            type="button"
          >
            <svg
              class="cache-1ah7xw8-sizeStyles e1gt4cfo0"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
              />
            </svg>
          </button>
        </div>
      </dialog>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal renders with default Props 1`] = `
<DocumentFragment>
  .cache-nkg4td-StyledBackdrop {
  position: fixed;
  top: 0;
  right: 0;
  height: 0;
  width: 0;
  overflow: hidden;
}

.cache-nkg4td-StyledBackdrop[data-open='true'] {
  overflow: auto;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #464959A6;
  bottom: 0;
  left: 0;
  height: 100%;
  width: 100%;
  opacity: 1;
}

.cache-1qlb7bg-StyledDialog {
  background-color: #ffffff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 24px;
  width: 708px;
  box-shadow: 0px 8px 40px 10px #151A2D5C;
}

.cache-1qlb7bg-StyledDialog[data-size="large"] {
  width: 850px;
}

.cache-1qlb7bg-StyledDialog[data-size="medium"] {
  width: 708px;
}

.cache-1qlb7bg-StyledDialog[data-size="small"] {
  width: 616px;
}

.cache-1qlb7bg-StyledDialog[data-size="xsmall"] {
  width: 400px;
}

.cache-1qlb7bg-StyledDialog[data-size="xxsmall"] {
  width: 360px;
}

.cache-1qlb7bg-StyledDialog[data-placement="bottom"] {
  margin: auto;
  margin-bottom: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="bottom-left"] {
  margin: auto;
  margin-left: 0;
  margin-bottom: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="bottom-right"] {
  margin: auto;
  margin-right: 0;
  margin-bottom: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="center"] {
  margin: auto;
}

.cache-1qlb7bg-StyledDialog[data-placement="left"] {
  margin: auto;
  margin-left: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="right"] {
  margin: auto;
  margin-right: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="top"] {
  margin: auto;
  margin-top: 0px;
}

.cache-1qlb7bg-StyledDialog[data-placement="top-left"] {
  margin: auto;
  margin-left: 0;
  margin-top: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="top-right"] {
  margin: auto;
  margin-right: 0;
  margin-top: 0;
}

<div>
    <div
      class="cache-nkg4td-StyledBackdrop e1cqen9h1"
      data-open="false"
    >
      <dialog
        aria-label="modal"
        class="cache-1qlb7bg-StyledDialog e1cqen9h0"
        data-placement="center"
        data-size="small"
        id=":r0:"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal renders with disclosure 1`] = `
<DocumentFragment>
  .cache-auy7uq-DisclosureContainer {
  display: contents;
}

<button
    aria-controls="modal-test"
    class="cache-auy7uq-DisclosureContainer ewlqbfi0"
    type="button"
  />
  <button
    type="button"
  >
    Test
  </button>
  .cache-nkg4td-StyledBackdrop {
  position: fixed;
  top: 0;
  right: 0;
  height: 0;
  width: 0;
  overflow: hidden;
}

.cache-nkg4td-StyledBackdrop[data-open='true'] {
  overflow: auto;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #464959A6;
  bottom: 0;
  left: 0;
  height: 100%;
  width: 100%;
  opacity: 1;
}

.cache-1qlb7bg-StyledDialog {
  background-color: #ffffff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 24px;
  width: 708px;
  box-shadow: 0px 8px 40px 10px #151A2D5C;
}

.cache-1qlb7bg-StyledDialog[data-size="large"] {
  width: 850px;
}

.cache-1qlb7bg-StyledDialog[data-size="medium"] {
  width: 708px;
}

.cache-1qlb7bg-StyledDialog[data-size="small"] {
  width: 616px;
}

.cache-1qlb7bg-StyledDialog[data-size="xsmall"] {
  width: 400px;
}

.cache-1qlb7bg-StyledDialog[data-size="xxsmall"] {
  width: 360px;
}

.cache-1qlb7bg-StyledDialog[data-placement="bottom"] {
  margin: auto;
  margin-bottom: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="bottom-left"] {
  margin: auto;
  margin-left: 0;
  margin-bottom: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="bottom-right"] {
  margin: auto;
  margin-right: 0;
  margin-bottom: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="center"] {
  margin: auto;
}

.cache-1qlb7bg-StyledDialog[data-placement="left"] {
  margin: auto;
  margin-left: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="right"] {
  margin: auto;
  margin-right: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="top"] {
  margin: auto;
  margin-top: 0px;
}

.cache-1qlb7bg-StyledDialog[data-placement="top-left"] {
  margin: auto;
  margin-left: 0;
  margin-top: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="top-right"] {
  margin: auto;
  margin-right: 0;
  margin-top: 0;
}

<div>
    <div
      class="cache-nkg4td-StyledBackdrop e1cqen9h1"
      data-open="false"
    >
      <dialog
        aria-label="modal-test"
        class="cache-1qlb7bg-StyledDialog e1cqen9h0"
        data-placement="center"
        data-size="small"
        id="modal-test"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal renders with disclosure and onBeforeClose 1`] = `
<DocumentFragment>
  <button
    type="button"
  >
    Test modal-test
  </button>
  .cache-nkg4td-StyledBackdrop {
  position: fixed;
  top: 0;
  right: 0;
  height: 0;
  width: 0;
  overflow: hidden;
}

.cache-nkg4td-StyledBackdrop[data-open='true'] {
  overflow: auto;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #464959A6;
  bottom: 0;
  left: 0;
  height: 100%;
  width: 100%;
  opacity: 1;
}

.cache-1qlb7bg-StyledDialog {
  background-color: #ffffff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 24px;
  width: 708px;
  box-shadow: 0px 8px 40px 10px #151A2D5C;
}

.cache-1qlb7bg-StyledDialog[data-size="large"] {
  width: 850px;
}

.cache-1qlb7bg-StyledDialog[data-size="medium"] {
  width: 708px;
}

.cache-1qlb7bg-StyledDialog[data-size="small"] {
  width: 616px;
}

.cache-1qlb7bg-StyledDialog[data-size="xsmall"] {
  width: 400px;
}

.cache-1qlb7bg-StyledDialog[data-size="xxsmall"] {
  width: 360px;
}

.cache-1qlb7bg-StyledDialog[data-placement="bottom"] {
  margin: auto;
  margin-bottom: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="bottom-left"] {
  margin: auto;
  margin-left: 0;
  margin-bottom: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="bottom-right"] {
  margin: auto;
  margin-right: 0;
  margin-bottom: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="center"] {
  margin: auto;
}

.cache-1qlb7bg-StyledDialog[data-placement="left"] {
  margin: auto;
  margin-left: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="right"] {
  margin: auto;
  margin-right: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="top"] {
  margin: auto;
  margin-top: 0px;
}

.cache-1qlb7bg-StyledDialog[data-placement="top-left"] {
  margin: auto;
  margin-left: 0;
  margin-top: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="top-right"] {
  margin: auto;
  margin-right: 0;
  margin-top: 0;
}

<div>
    <div
      class="cache-nkg4td-StyledBackdrop e1cqen9h1"
      data-open="false"
    >
      <dialog
        aria-label="modal-test"
        class="cache-1qlb7bg-StyledDialog e1cqen9h0"
        data-placement="center"
        data-size="small"
        data-testid="test"
        id="modal-test"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal renders with opened={true} 1`] = `
<DocumentFragment>
  .cache-nkg4td-StyledBackdrop {
  position: fixed;
  top: 0;
  right: 0;
  height: 0;
  width: 0;
  overflow: hidden;
}

.cache-nkg4td-StyledBackdrop[data-open='true'] {
  overflow: auto;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #464959A6;
  bottom: 0;
  left: 0;
  height: 100%;
  width: 100%;
  opacity: 1;
}

.cache-1qlb7bg-StyledDialog {
  background-color: #ffffff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 24px;
  width: 708px;
  box-shadow: 0px 8px 40px 10px #151A2D5C;
}

.cache-1qlb7bg-StyledDialog[data-size="large"] {
  width: 850px;
}

.cache-1qlb7bg-StyledDialog[data-size="medium"] {
  width: 708px;
}

.cache-1qlb7bg-StyledDialog[data-size="small"] {
  width: 616px;
}

.cache-1qlb7bg-StyledDialog[data-size="xsmall"] {
  width: 400px;
}

.cache-1qlb7bg-StyledDialog[data-size="xxsmall"] {
  width: 360px;
}

.cache-1qlb7bg-StyledDialog[data-placement="bottom"] {
  margin: auto;
  margin-bottom: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="bottom-left"] {
  margin: auto;
  margin-left: 0;
  margin-bottom: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="bottom-right"] {
  margin: auto;
  margin-right: 0;
  margin-bottom: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="center"] {
  margin: auto;
}

.cache-1qlb7bg-StyledDialog[data-placement="left"] {
  margin: auto;
  margin-left: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="right"] {
  margin: auto;
  margin-right: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="top"] {
  margin: auto;
  margin-top: 0px;
}

.cache-1qlb7bg-StyledDialog[data-placement="top-left"] {
  margin: auto;
  margin-left: 0;
  margin-top: 0;
}

.cache-1qlb7bg-StyledDialog[data-placement="top-right"] {
  margin: auto;
  margin-right: 0;
  margin-top: 0;
}

.cache-10pzl3m-StyledContainer {
  position: absolute;
  top: 16px;
  right: 16px;
}

.cache-xnjxeq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.cache-xnjxeq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-xnjxeq-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-xnjxeq-StyledGhostButton:hover,
.cache-xnjxeq-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.cache-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div>
    <div
      class="cache-nkg4td-StyledBackdrop e1cqen9h1"
      data-open="true"
    >
      <dialog
        aria-label="modal"
        class="cache-1qlb7bg-StyledDialog e1cqen9h0"
        data-placement="center"
        data-size="small"
        id=":r1:"
        open=""
      >
        <div>
          test
        </div>
        <div
          class="cache-10pzl3m-StyledContainer e227mx40"
        >
          <button
            aria-label="close"
            class="cache-xnjxeq-StyledGhostButton e112qvla0"
            type="button"
          >
            <svg
              class="cache-1ah7xw8-sizeStyles e1gt4cfo0"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
              />
            </svg>
          </button>
        </div>
      </dialog>
    </div>
  </div>
</DocumentFragment>
`;
